<resources>
    <string name="app_name">Banking Point India</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in_to">Log in To</string>
    <string name="i_agree_to_terms_conditions"><![CDATA[I agree to Terms & Conditions]]></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_account_yet">Don\'t have account yet?</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account_now">Create Account Now</string>
    <string name="get_in_touch">Get in Touch</string>
    <string name="email_support_bankingpointindia_com">Email: support@bankingpointindia com</string>
    <string name="customer_support_7557816646_1800_102_7696">Mobile: 7557816646/1800-102-7696</string>
    <string name="userid_phone">UserId/Phone</string>
    <string name="password">Password</string>
    <string name="enter_user_id">Enter UserId/Mobile number</string>
    <string name="enter_password">Enter Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="log_out">Log out</string>
    <string name="success">SUCCESS</string>
    <string name="your_name">Your Name</string>
    <string name="business_name">Business Name</string>
    <string name="address">Address</string>
    <string name="next">Next</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="financial_banking"><![CDATA[Financial & Banking]]></string>
    <string name="cash_withdrawal">Cash Withdrawal</string>
    <string name="balance_enquiry">Balance Enquiry</string>
    <string name="mini_statement">Mini Statement</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="search_by_name">Search by name</string>
    <string name="select_bank">Select Bank</string>
    <string name="capture_fingerprint">Capture Fingerprint</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="verify">Verify</string>
    <string name="user_id">User Id</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="browse_plans">Browse Plans</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="recharge_now">Recharge Now</string>
    <string name="prepaid">Prepaid</string>
    <string name="check_info">Check Info</string>
    <string name="customer_id">Customer Id</string>
    <string name="transaction_report">Transaction Report</string>
    <string name="_99_rs">99 Rs/-</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="send_money_to_bank">Send Money To Bank</string>
    <string name="add_money">Add Money</string>
    <string name="send_money">Send Money</string>
    <string name="account_number">Account Number</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="money_transfer">Money Transfer</string>
    <string name="postpaid">Postpaid</string>
    <string name="pay_now">Pay Now</string>
    <string name="cancel">Cancel</string>
    <string name="recharge_succss">Recharge Successful</string>
    <string name="enter_mobile">Enter Mobile Number</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="select_operator">Select Operator</string>
    <string name="mobile_recharge">Mobile Recharge</string>
    <string name="amount">Amount</string>
    <string name="proceed">Proceed</string>
    <string name="micro_atm">Micro ATM</string>
    <string name="move_to_bank">Move To Bank</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="mantra">Mantra</string>
    <string name="morpho">Morpho</string>
    <string name="connect_the_device_of_your_choice_then_click_on_it">Connect the device of your choice then click on it</string>
    <string name="linked_bank_account">Linked Bank Account</string>
    <string name="amoun_will_be_transfered_to_linked_account">(Amount will be transferred to Linked Account)</string>
    <string name="a_c_holder_name">A/C Holder Name</string>
    <string name="account_no">Account No.</string>
    <string name="imps">IMPS</string>
    <string name="neft">NEFT</string>
    <string name="transfer_to_bank">Transfer To Bank</string>
    <string name="bank_transfer_charges">Bank Transfer Charges</string>
    <string name="imps_5rs_neft_10rs">IMPS : 5Rs/-, NEFT : 10Rs/-</string>
    <string name="txn_type">Txn Type</string>
    <string name="date">Date</string>
    <string name="narration">Narration</string>
    <string name="accunt_balance">Accunt Balance</string>
    <string name="order_id">Order Id</string>
    <string name="select_plan">Select Plan</string>

</resources>