<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".user.SignUpFragment">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.057" />

        <EditText
            android:id="@+id/sign_up_name_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:maxLines="1"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/sign_up_business_name_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:maxLines="1"
            android:inputType="textPersonName"
            android:hint="@string/business_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_name_editText" />

        <EditText
            android:id="@+id/sign_up_address_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:inputType="textMultiLine"
            android:hint="@string/address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_business_name_editText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_next_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="@+id/sign_up_address_editText"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_address_editText" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/sign_up_name_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="sign_up_name_editText,sign_up_business_name_editText
,sign_up_address_editText, sign_up_next_button" />

        <EditText
            android:id="@+id/sign_up_email_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:maxLines="1"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_next_button" />

        <EditText
            android:id="@+id/sign_up_phone_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:maxLines="1"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_email_editText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/create_account_now"
            app:layout_constraintEnd_toEndOf="@+id/sign_up_phone_editText"
            app:layout_constraintStart_toStartOf="@+id/sign_up_phone_editText"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_phone_editText" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/sign_up_email_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="sign_up_email_editText, sign_up_phone_editText,
        create_account_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>