<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.microatm.MicroAtmFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:elevation="0dp"
            android:elevation="0dp"
            android:background="@drawable/log_in_background" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="8dp"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/micro_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/micro_balance_radio_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/balance_enquiry" />

                    <RadioButton
                        android:id="@+id/micro_cw_radio_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cash_withdrawal" />

                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/micro_mobile_textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/micro_mobile_textInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:hint="@string/mobile_number"
                        android:inputType="phone"
                        android:maxLength="10" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/micro_amount_textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    app:helperTextEnabled="true"
                    app:helperText="Minimum: 100 Rs/- Maximum: 10,000 Rs/-"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="32dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/micro_amount_textInput"
                        android:layout_width="match_parent"
                        android:enabled="false"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:hint="@string/amount"
                        android:inputType="numberDecimal"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:cardCornerRadius="0dp"
            app:cardElevation="6dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/micro_proceed_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/proceed" />
        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>
</layout>